# tarkaset

./: .qmlls.ini  CMakeLists.txt  Main.qml  assets.qrc  main.cpp
android/: AndroidManifest.xml  build.gradle
android/res/values/: styles.xml
